# burnreport

./: .gitignore  Cargo.toml  README.md
docs/: Legislation.md  nutrition.md
frontend/: .eslintrc.js  index.html  jest.config.js  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.tsx  mocks.ts  setupTests.ts
frontend/src/components/AnchorLink/: index.tsx
frontend/src/components/BodyLogRow/: index.tsx
frontend/src/components/NutrientTableRow/: index.tsx
frontend/src/components/PortionList/: index.tsx
frontend/src/components/PortionTable/: index.tsx
frontend/src/components/ProductCell/: index.tsx
frontend/src/components/RecipieCell/: index.tsx
frontend/src/components/Row/: index.tsx
frontend/src/containers/AdditionalTable/: index.tsx
frontend/src/containers/Bar/: index.tsx
frontend/src/containers/BodyChart/: index.tsx
frontend/src/containers/BodyTable/: index.tsx
frontend/src/containers/ConsumedItem/: index.tsx
frontend/src/containers/Navigation/: index.tsx
frontend/src/containers/NutrientBar/: index.tsx
frontend/src/containers/NutrientTable/: energy.tsx  index.spec.tsx  index.tsx
frontend/src/containers/OmegaBar/: index.tsx
frontend/src/containers/PortionForm/: index.tsx
frontend/src/containers/ProductForm/: index.tsx
frontend/src/containers/ProductItem/: index.tsx
frontend/src/containers/ProductSearchForm/: index.tsx
frontend/src/containers/ProductSelect/: index.tsx
frontend/src/containers/ReportForm/: index.tsx
frontend/src/nutrients/: nutrients.ts  vitamins.ts
frontend/src/product/: product.ts
frontend/src/recipie/: recipie.ts
frontend/src/report/: report.ts
frontend/src/theme/: cookie.ts  light.ts
frontend/src/util/: testData.tsx  useQuery.ts
sql/: tables.sql
src/: api.rs  db.rs  main.rs
src/api/: db.rs  error.rs  handlers.rs  mod.rs  routes.rs
src/body/: mod.rs
src/config/: mod.rs
src/file/: mod.rs  reading.rs
src/nutrients/: base.rs  mod.rs  vitamins.rs
src/product/: mod.rs  portion.rs  product.rs  search.rs
src/products/: base.rs  mod.rs
src/recipie/: mod.rs
src/report/: mod.rs
src/routes/: api_error.rs  body.rs  frontend.rs  mod.rs  products.rs  recipies.rs  report.rs  search.rs
src/search/: mod.rs
src/spi/: mod.rs
(+38 files in other folders)
