[package]
name = "burnreport"
version = "0.2.0"
authors = ["Demonus <pogon.ap@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.120"
derive_more = "0.99.10"
json = "*"

futures = "0.3.12"
bytes = "1"
log = "0.4.13"
env_logger = "0.7.0"

dotenv = "0.15.0"

csv = "1.1"


sqlx = { version = "0.5.1", features = [ "runtime-actix-rustls", "macros", "sqlite", "chrono" ] }
actix-web = "4.0.0-beta.4"
actix-files = "0.6.0-beta.3"
actix-service = "2.0.0-beta.5"
actix-multipart = "0.4.0-beta.4"