[package]
name = "burnreport"
version = "0.2.0"
authors = ["Demonus <pogon.ap@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
derive_more = "0.99.17"
json = "0.12.4"

futures = "0.3.26"
bytes = "1"
log = "0.4.17"
env_logger = "0.10.0"

dotenv = "0.15.0"

csv = "1.1"


sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "macros", "sqlite", "chrono" ] }
actix-web = "4.3.0"
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-multipart = "0.5.0"